--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/gurthang/Images/FDcZKLBXMAsM45V.jpg
-wallpaper = VGA-1,/home/gurthang/Images/FDcZKLBXMAsM45V.jpg
-wallpaper = HDMI-A-4,/home/gurthang/Images/FDcZKLBXMAsM45V.jpg
+preload = ~/.config/hypr/wallpapers/1.jpg
+wallpaper = VGA-1,~/.config/hypr/wallpapers/1.jpg
+wallpaper = HDMI-A-4,~/.config/hypr/wallpapers/1.jpg
