--- a/hypr/rules.conf
+++ b/hypr/rules.conf
@@ -20,3 +20,7 @@ windowrule=workspace 1,alacritty
 windowrule=workspace 2,firefox
 windowrule=workspace 3,dolphin
 windowrule=workspace 4,Steam
+
+# make vscodium transparent
+windowrule=opacity .9 0.8,^(VSCodium)$
+
